Remove main.cpp and refactor max function
The main.cpp file has been deleted and the max function has been reorganized into its own files (max1.h and max1.cpp) under part1/chapter1 directory for better structure and organization. CMakeLists.txt is also updated to include these changes. Accompanying comments are added for clarity regarding the use and requirements of the max function.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,8 @@ project(templates_complete)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(templates_complete main.cpp
-        part1/chapter1.h)
+include_directories(part1/chapter1)
+
+add_executable(templates_complete
+        part1/chapter1/max1.h
+        part1/chapter1/max1.cpp)
