Add 'maxauto.h' and 'maxdecltype.h', refactor 'max1.cpp'
Two new files, 'maxauto.h' and 'maxdecltype.h', have been added to 'part1/chapter1'. They contain different implementations of the 'max' function. 'max1.cpp' has also been refactored to include additional comments, and 'main_2()' function has been removed. The 'CMakeLists.txt' file is updated to incorporate these new changes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,6 @@ include_directories(part1/chapter1)
 
 add_executable(templates_complete
         part1/chapter1/max1.h
-        part1/chapter1/max1.cpp)
+        part1/chapter1/max1.cpp
+        part1/chapter1/maxauto.h
+        part1/chapter1/maxdecltype.h)
