Add new header files and template implementations
The commit introduces two new header files, 'maxdefault.hpp' and 'maxcommon.h'. Both files contain templates to find the maximum between two values using different approaches. The corresponding implementations are added in 'maxdefault.cpp' and 'maxcommon.cpp' respectively. Changes to 'CMakeLists.txt' reflect these additions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,12 @@ set(CMAKE_CXX_STANDARD 17)
 include_directories(part1/chapter1)
 
 add_executable(templates_complete
-        part1/chapter1/max1.h
-        part1/chapter1/max1.cpp
-        part1/chapter1/maxauto.h
-        part1/chapter1/maxdecltype.h)
+#        part1/chapter1/max1.h
+#        part1/chapter1/max1.cpp
+#        part1/chapter1/maxauto.h
+#        part1/chapter1/maxdecltype.h
+#        part1/chapter1/maxcommon.h
+#        part1/chapter1/maxcommon.cpp
+        part1/chapter1/maxdefault.hpp
+        part1/chapter1/maxdefault.cpp
+)
